# nlopt-python

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  appveyor.yml  build.bat  build.sh  extensions.py  pyproject.toml  setup.cfg  setup.py
.claude/skills/update-nlopt/: SKILL.md
.github/: README.md  setup.md
.github/workflows/: build.yml  manual-deploy.yml  manylinux-image.yml  nightly-build.yml  nlopt-update-check.yml  wc-build.yml
Dockerfiles/: Dockerfile  Makefile  cmd.sh  manylinux1.Dockerfile  manylinux2010.Dockerfile  manylinux2010_x86_64.Dockerfile  ubuntu.Dockerfile  ubuntu.sh
ci/: nlopt_manylinux2014_x86_64.Dockerfile
nlopt/: __init__.py  nlopt.py  test.py
scripts/: install_swig.sh  prepare_for_build.sh  prepare_linux.sh  prepare_macos.sh  prepare_windows.bat
test_scripts/: sample_test_script.py
