cmake_minimum_required(VERSION 3.1.0)
project(nlopt-python)

set (CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_BINARY_DIR})
set (CMAKE_INSTALL_LIBDIR ${CMAKE_INSTALL_PREFIX})
set (INSTALL_PYTHON_DIR ${CMAKE_INSTALL_PREFIX})

add_subdirectory(extern/nlopt)

set (NLOPT_PYTHON ON)
set (NLOPT_OCTAVE OFF)
set (NLOPT_MATLAB OFF)
set (NLOPT_GUILE OFF)
