[metadata]
name = nlopt
author = Daniel Bok
author_email = daniel.bok@outlook.com
project_urls =
    Documentation = https://nlopt.readthedocs.io/en/latest/
    Code = https://github.com/DanielBok/nlopt-python
    Issue tracker = https://github.com/DanielBok/nlopt-python/issues
license = MIT
maintainer = Daniel Bok
maintainer_email = daniel.bok@outlook.com
description = Library for nonlinear optimization, wrapping many algorithms for global and local, constrained or unconstrained, optimization
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    algorithms
    global local constrained unconstrained optimization
    optimization
    non-linear optimization
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
